# rucene

./: Cargo.toml  README.md  docker-compose.yml
rucene-core/: Cargo.toml
rucene-core/src/: models.rs  repositories.rs
rucene-core/src/models/: inverted_index.rs  postings_list.rs  term_list.rs  tokenizer.rs
rucene-core/src/repositories/: database_settings.rs  mysql_client.rs  token_repository.rs
