[package]
name = "rucene-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.8", features = ["mysql", "r2d2"] }
lindera = { version = "0.22.1", features = ["ipadic"] } # https://github.com/lindera-morphology/lindera